# Machine-Learning-Bootcamp

./: .gitignore  README.md
Module00/ex00/: answers.txt  requirements.txt
Module00/ex01/: exec.py
Module00/ex02/: whois.py
Module00/ex03/: count.py
Module00/ex04/: operations.py
Module00/ex05/: kata00.py  kata01.py  kata02.py  kata03.py  kata04.py
Module00/ex06/: recipe.py
Module00/ex07/: filterwords.py
Module00/ex08/: sos.py
Module00/ex09/: guess.py
Module00/ex10/: loading.py
Module01/ex00/: book.py  recipe.py  test.py
Module01/ex01/: game.py
Module01/ex02/: test.py  vector.py
Module01/ex03/: generator.py
Module01/ex04/: eval.py
Module01/ex05/: the_bank.py
Module02/ex00/: ft_filter.py  ft_map.py  ft_reduce.py
Module02/ex01/: main.py
Module02/ex03/: csvreader.py  main.py
Module02/ex04/: README.md  build.sh  note.text  pyproject.toml
Module02/ex04/src/my_minipack/: __init__.py  logger.py
Module02/ex04/src/my_minipack.egg-info/: PKG-INFO  SOURCES.txt
Module02/ex05/: TinyStatistician.py  note.txt
